Updated personal pages
with better css

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Details Contact</h1>
-    <p>Imaginery address</p>
-    <p>Tel: 0928734958279</p>
-    <p>Email: Marcel@gmail.com</p>
+    
     
     <form action="">
         <label for="name">Your Name:</label>
