--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcel's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+
+<!-- <style>
+    body{
+        background-color: antiquewhite;
+    }
+    h3 {
+        color: royalblue;
+    }
+    hr {
+        background-color: antiquewhite;
+        border-color: burlywood;
+        border-style: dotted none none ;
+        border-width: 5px;
+        width: 20%;
+    } -->
+    
+</style>
+
+<body >
     <table cellspacing='20'>
         <tr>
             <td><img src="Marcel.png" alt="Marcel Personal Site"></td>
@@ -17,7 +36,7 @@
     </table>
     <hr size= 3 noshade>
     <h3>Education</h3>
-    <table cellspacing='5'>
+    <table cellspacing='0 0 20'>
         <tr>
             <th>Date</th>
             <th>Core Competencies</th>
